work on dissertation and prelim

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -48,6 +48,8 @@
 %===============================================================================
 \section{Low-Order Scheme for Conservation Law Systems}  
 %===============================================================================
+\subsection{Invariant Domains\label{sec:invariant_domains}}
+  \input{content/low_order/invariant_domain}
 \subsection{The Low-Order Scheme\label{sec:low_order_scheme_system}}
   \input{content/low_order/low_order_scheme_system}
 %===============================================================================
