--- a/doc/dissertation/content/low_order/low_order_scheme_system.tex
+++ b/doc/dissertation/content/low_order/low_order_scheme_system.tex
@@ -6,6 +6,8 @@ lumps the mass matrix and adds a low-order artificial diffusion term:
      + \sumj\diffusionmatrixletter\ij^{L}(\timevalue)\solutionletter_j
      = 0 \eqc
 \end{equation}
+where the low-order artificial diffusion matrix $\loworderdiffusionmatrix$
+is given in the following definition:
 %--------------------------------------------------------------------------------
 \begin{definition}{Low-Order Artificial Diffusion Matrix}
    The low-order artificial diffusion matrix $\loworderdiffusionmatrix[\timeindex]$
