--- a/doc/dissertation/content/results/overview.tex
+++ b/doc/dissertation/content/results/overview.tex
@@ -1,4 +1,6 @@
 This chapter presents the results of the methods described in this
-dissertation. Section \ref{sec:transport_results} gives results for the
+dissertation. The methods were implemented using the \texttt{deal.II}
+finite element library\cite{dealii}.
+Section \ref{sec:transport_results} gives results for the
 scalar transport equation, and Section \ref{sec:shallow_water_results}
 gives results for the shallow water equations.
