--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -62,6 +62,9 @@ DMP   & discrete maximum principle\\
 EV    & entropy viscosity\\
 FCT   & flux-corrected transport\\
 FEM   & finite element method\\
+FV    & finite volume\\
+IVP   & initial value problem\\
+LED   & local extremum diminishing\\
 RK    & Runge-Kutta\\
 SSPRK & strong stability-preserving Runge-Kutta\\
 \end{mytable}
@@ -164,7 +167,7 @@ $\entropyresidual_\cellindex$ & entropy residual for cell $\cellindex$\\
 $\RKnstages$       & number of stages for a Runge-Kutta scheme\\
 $\support_i$       & support of FEM test/basis function $i$\\
 $\support\ij$      & dual support of FEM test/basis functions $i$ and $j$\\
-$\conssource$      & conservation law source function\\
+$\conssource(\vectorsolution)$ & conservation law source function\\
 $\timevalue$       & time\\
 
 % U
