--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -85,6 +85,13 @@
   year = "2014",
 }
 
+@unpublished{guermond_invariantdomain,
+  author = "Jean-Luc Guermond and Bojan Popov",
+  title = "Invariant Domains and First-Order Continuous Finite Element
+    Approximation for Hyperbolic Systems",
+  year = "2015"
+}
+
 @article{borisbook,
   author = "Jay P. Boris and David L. Book",
   title = "I. {SHASTA}, A Fluid Transport Algorithm that Works",
@@ -133,4 +140,13 @@
 	year = "2009",
 	publisher = "Springer-Verlag Berlin Heidelberg",
 	edition = "3rd"
+}
+
+@article{dealii,
+  title = {The \texttt{deal.II} Library, Version 8.3},
+  author = {W. Bangerth and T. Heister and L. Heltai
+            and G. Kanschat and M. Kronbichler
+            and M. Maier and B. Turcksin},
+  journal = {preprint},
+  year = {2015},
 }
